--- a/series.conf
+++ b/series.conf
@@ -770,6 +770,7 @@
 	patches.suse/mm-convert-migrate_pages-to-work-on-folios.patch
 	patches.suse/maple_tree-clean-up-mas_parent_enum-and-rename-to-ma.patch
 	patches.suse/maple_tree-add-format-option-to-mt_dump.patch
+	patches.suse/maple_tree-add-debug-BUG_ON-and-WARN_ON-variants.patch
 	patches.suse/maple_tree-add-__init-and-__exit-to-test-module.patch
 	patches.suse/mm-page_alloc-set-sysctl_lowmem_reserve_ratio-storage-class-specifier-to-static.patch
 	patches.suse/mm-compaction-remove-compaction-result-helpers.patch
