--- a/series.conf
+++ b/series.conf
@@ -3100,6 +3100,7 @@
 	patches.kernel.org/6.6.15-181-net-micrel-Fix-PTP-frame-parsing-for-lan8814.patch
 	patches.kernel.org/6.6.15-182-net-rds-Fix-UBSAN-array-index-out-of-bounds-in.patch
 	patches.kernel.org/6.6.15-183-netfs-fscache-Prevent-Oops-in-fscache_put_cach.patch
+	patches.kernel.org/6.6.15-184-tracing-Ensure-visibility-when-inserting-an-el.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
