--- a/series.conf
+++ b/series.conf
@@ -3094,6 +3094,7 @@
 	patches.kernel.org/6.6.15-175-llc-make-llc_ui_sendmsg-more-robust-against-bo.patch
 	patches.kernel.org/6.6.15-176-llc-Drop-support-for-ETH_P_TR_802_2.patch
 	patches.kernel.org/6.6.15-177-udp-fix-busy-polling.patch
+	patches.kernel.org/6.6.15-178-net-fix-removing-a-namespace-with-conflicting-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
