--- a/series.conf
+++ b/series.conf
@@ -3220,6 +3220,7 @@
 	patches.kernel.org/6.6.15-301-drm-panel-simple-add-missing-bus-flags-for-Tia.patch
 	patches.kernel.org/6.6.15-302-drm-panel-samsung-s6d7aa0-drop-DRM_BUS_FLAG_DE.patch
 	patches.kernel.org/6.6.15-303-drm-bridge-sii902x-Fix-probing-race-issue.patch
+	patches.kernel.org/6.6.15-304-drm-bridge-sii902x-Fix-audio-codec-unregistrat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
