--- a/series.conf
+++ b/series.conf
@@ -3057,6 +3057,7 @@
 	patches.kernel.org/6.6.15-138-mm-page_alloc-unreserve-highatomic-page-blocks.patch
 	patches.kernel.org/6.6.15-139-serial-Do-not-hold-the-port-lock-when-setting-.patch
 	patches.kernel.org/6.6.15-140-ksmbd-set-v2-lease-version-on-lease-upgrade.patch
+	patches.kernel.org/6.6.15-141-ksmbd-fix-potential-circular-locking-issue-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
