--- a/series.conf
+++ b/series.conf
@@ -3242,6 +3242,7 @@
 	patches.kernel.org/6.6.15-323-drm-bridge-samsung-dsim-Don-t-use-FORCE_STOP_S.patch
 	patches.kernel.org/6.6.15-324-cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
 	patches.kernel.org/6.6.15-325-mips-Call-lose_fpu-0-before-initializing-fcr31.patch
+	patches.kernel.org/6.6.15-326-genirq-Initialize-resend_node-hlist-for-all-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
