--- a/series.conf
+++ b/series.conf
@@ -3164,6 +3164,7 @@
 	patches.kernel.org/6.6.15-245-platform-x86-intel-uncore-freq-Fix-types-in-sy.patch
 	patches.kernel.org/6.6.15-246-platform-x86-p2sb-Allow-p2sb_bar-calls-during-.patch
 	patches.kernel.org/6.6.15-247-ksmbd-fix-global-oob-in-ksmbd_nl_policy.patch
+	patches.kernel.org/6.6.15-248-firmware-arm_scmi-Check-mailbox-SMT-channel-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
