--- a/series.conf
+++ b/series.conf
@@ -3215,6 +3215,7 @@
 	patches.kernel.org/6.6.15-296-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XAK01-.patch
 	patches.kernel.org/6.6.15-297-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XTN02-.patch
 	patches.kernel.org/6.6.15-298-drm-amdgpu-gfx10-set-UNORD_DISPATCH-in-compute.patch
+	patches.kernel.org/6.6.15-299-drm-amdgpu-gfx11-set-UNORD_DISPATCH-in-compute.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
