--- a/series.conf
+++ b/series.conf
@@ -3065,6 +3065,7 @@
 	patches.kernel.org/6.6.15-146-bpf-move-explored_state-closer-to-the-beginnin.patch
 	patches.kernel.org/6.6.15-147-bpf-extract-same_callsites-as-utility-function.patch
 	patches.kernel.org/6.6.15-148-bpf-exact-states-comparison-for-iterator-conve.patch
+	patches.kernel.org/6.6.15-149-selftests-bpf-tests-with-delayed-read-precisio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
