--- a/series.conf
+++ b/series.conf
@@ -3178,6 +3178,7 @@
 	patches.kernel.org/6.6.15-259-drm-Disable-the-cursor-plane-on-atomic-context.patch
 	patches.kernel.org/6.6.15-260-drm-virtio-Disable-damage-clipping-if-FB-chang.patch
 	patches.kernel.org/6.6.15-261-drm-Allow-drivers-to-indicate-the-damage-helpe.patch
+	patches.kernel.org/6.6.15-262-drm-amd-display-fix-bandwidth-validation-failu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
