--- a/series.conf
+++ b/series.conf
@@ -2925,6 +2925,7 @@
 	patches.kernel.org/6.6.15-006-soundwire-bus-introduce-controller_id.patch
 	patches.kernel.org/6.6.15-007-soundwire-fix-initializing-sysfs-for-same-devi.patch
 	patches.kernel.org/6.6.15-008-net-stmmac-Tx-coe-sw-fallback.patch
+	patches.kernel.org/6.6.15-009-net-stmmac-Prevent-DSA-tags-from-breaking-COE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
