--- a/series.conf
+++ b/series.conf
@@ -3054,6 +3054,7 @@
 	patches.kernel.org/6.6.15-135-serial-sc16is7xx-remove-obsolete-loop-in-sc16i.patch
 	patches.kernel.org/6.6.15-136-serial-sc16is7xx-improve-do-while-loop-in-sc16.patch
 	patches.kernel.org/6.6.15-137-LoongArch-smp-Call-rcutree_report_cpu_starting.patch
+	patches.kernel.org/6.6.15-138-mm-page_alloc-unreserve-highatomic-page-blocks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
