--- a/series.conf
+++ b/series.conf
@@ -3144,6 +3144,7 @@
 	patches.kernel.org/6.6.15-225-fjes-fix-memleaks-in-fjes_hw_setup.patch
 	patches.kernel.org/6.6.15-226-selftests-bonding-do-not-test-arp-ns-target-wi.patch
 	patches.kernel.org/6.6.15-227-net-fec-fix-the-unhandled-context-fault-from-s.patch
+	patches.kernel.org/6.6.15-228-tsnep-Remove-FCS-for-XDP-data-path.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
