--- a/series.conf
+++ b/series.conf
@@ -3033,6 +3033,7 @@
 	patches.kernel.org/6.6.15-114-arm64-entry-fix-ARM64_WORKAROUND_SPECULATIVE_U.patch
 	patches.kernel.org/6.6.15-115-rtc-cmos-Use-ACPI-alarm-for-non-Intel-x86-syst.patch
 	patches.kernel.org/6.6.15-116-rtc-Adjust-failure-return-code-for-cmos_set_al.patch
+	patches.kernel.org/6.6.15-117-rtc-mc146818-lib-Adjust-failure-return-code-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
