--- a/series.conf
+++ b/series.conf
@@ -3022,6 +3022,7 @@
 	patches.kernel.org/6.6.15-103-media-videobuf2-dma-sg-fix-vmap-callback.patch
 	patches.kernel.org/6.6.15-104-mmc-core-Use-mrq.sbc-in-close-ended-ffu.patch
 	patches.kernel.org/6.6.15-105-mmc-mmc_spi-remove-custom-DMA-mapped-buffers.patch
+	patches.kernel.org/6.6.15-106-media-i2c-st-mipid02-correct-format-propagatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
