--- a/series.conf
+++ b/series.conf
@@ -3037,6 +3037,7 @@
 	patches.kernel.org/6.6.15-118-rtc-Add-support-for-configuring-the-UIP-timeou.patch
 	patches.kernel.org/6.6.15-119-rtc-Extend-timeout-for-waiting-for-UIP-to-clea.patch
 	patches.kernel.org/6.6.15-120-nouveau-vmm-don-t-set-addr-on-the-fail-path-to.patch
+	patches.kernel.org/6.6.15-121-efi-disable-mirror-feature-during-crashkernel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
