--- a/series.conf
+++ b/series.conf
@@ -3142,6 +3142,7 @@
 	patches.kernel.org/6.6.15-223-i40e-set-xdp_rxq_info-frag_size.patch
 	patches.kernel.org/6.6.15-224-i40e-update-xdp_rxq_info-frag_size-for-ZC-enab.patch
 	patches.kernel.org/6.6.15-225-fjes-fix-memleaks-in-fjes_hw_setup.patch
+	patches.kernel.org/6.6.15-226-selftests-bonding-do-not-test-arp-ns-target-wi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
