--- a/series.conf
+++ b/series.conf
@@ -2964,6 +2964,7 @@
 	patches.kernel.org/6.6.15-045-mtd-maps-vmu-flash-Fix-the-mtd-core-switch-to-.patch
 	patches.kernel.org/6.6.15-046-mtd-rawnand-Prevent-crossing-LUN-boundaries-du.patch
 	patches.kernel.org/6.6.15-047-mtd-rawnand-Fix-core-interference-with-sequent.patch
+	patches.kernel.org/6.6.15-048-mtd-rawnand-Prevent-sequential-reads-with-on-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
