--- a/series.conf
+++ b/series.conf
@@ -3091,6 +3091,7 @@
 	patches.kernel.org/6.6.15-172-bnxt_en-Wait-for-FLR-to-complete-during-probe.patch
 	patches.kernel.org/6.6.15-173-bnxt_en-Prevent-kernel-warning-when-running-of.patch
 	patches.kernel.org/6.6.15-174-vlan-skip-nested-type-that-is-not-IFLA_VLAN_QO.patch
+	patches.kernel.org/6.6.15-175-llc-make-llc_ui_sendmsg-more-robust-against-bo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
