--- a/series.conf
+++ b/series.conf
@@ -2956,6 +2956,7 @@
 	patches.kernel.org/6.6.15-037-crypto-lib-mpi-Fix-unexpected-pointer-access-i.patch
 	patches.kernel.org/6.6.15-038-erofs-fix-lz4-inplace-decompression.patch
 	patches.kernel.org/6.6.15-039-crypto-api-Disallow-identical-driver-names.patch
+	patches.kernel.org/6.6.15-040-PM-hibernate-Enforce-ordering-during-image-com.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
