--- a/series.conf
+++ b/series.conf
@@ -3214,6 +3214,7 @@
 	patches.kernel.org/6.6.15-295-drm-panel-edp-Add-AUO-B116XTN02-BOE-NT116WHM-N.patch
 	patches.kernel.org/6.6.15-296-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XAK01-.patch
 	patches.kernel.org/6.6.15-297-drm-panel-edp-drm-panel-edp-Fix-AUO-B116XTN02-.patch
+	patches.kernel.org/6.6.15-298-drm-amdgpu-gfx10-set-UNORD_DISPATCH-in-compute.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
