--- a/series.conf
+++ b/series.conf
@@ -3151,6 +3151,7 @@
 	patches.kernel.org/6.6.15-232-btrfs-avoid-copying-BTRFS_ROOT_SUBVOL_DEAD-fla.patch
 	patches.kernel.org/6.6.15-233-btrfs-ref-verify-free-ref-cache-before-clearin.patch
 	patches.kernel.org/6.6.15-234-btrfs-tree-checker-fix-inline-ref-size-in-erro.patch
+	patches.kernel.org/6.6.15-235-btrfs-don-t-warn-if-discard-range-is-not-align.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
