--- a/series.conf
+++ b/series.conf
@@ -2953,6 +2953,7 @@
 	patches.kernel.org/6.6.15-034-arm64-properly-install-vmlinuz.efi.patch
 	patches.kernel.org/6.6.15-035-OPP-Pass-rounded-rate-to-_set_opp.patch
 	patches.kernel.org/6.6.15-036-btrfs-sysfs-validate-scrub_speed_max-value.patch
+	patches.kernel.org/6.6.15-037-crypto-lib-mpi-Fix-unexpected-pointer-access-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
