--- a/series.conf
+++ b/series.conf
@@ -3218,6 +3218,7 @@
 	patches.kernel.org/6.6.15-299-drm-amdgpu-gfx11-set-UNORD_DISPATCH-in-compute.patch
 	patches.kernel.org/6.6.15-300-drm-bridge-parade-ps8640-Wait-for-HPD-when-doi.patch
 	patches.kernel.org/6.6.15-301-drm-panel-simple-add-missing-bus-flags-for-Tia.patch
+	patches.kernel.org/6.6.15-302-drm-panel-samsung-s6d7aa0-drop-DRM_BUS_FLAG_DE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
