--- a/series.conf
+++ b/series.conf
@@ -3010,6 +3010,7 @@
 	patches.kernel.org/6.6.15-091-arm64-dts-qcom-sdm845-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.6.15-092-arm64-dts-qcom-sm8150-fix-USB-DP-DM-HS-PHY-int.patch
 	patches.kernel.org/6.6.15-093-arm64-dts-qcom-sm8150-fix-USB-SS-wakeup.patch
+	patches.kernel.org/6.6.15-094-arm64-dts-qcom-sc8180x-fix-USB-DP-DM-HS-PHY-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
