--- a/series.conf
+++ b/series.conf
@@ -3061,6 +3061,7 @@
 	patches.kernel.org/6.6.15-142-ksmbd-don-t-increment-epoch-if-current-state-a.patch
 	patches.kernel.org/6.6.15-143-ksmbd-send-lease-break-notification-on-FILE_RE.patch
 	patches.kernel.org/6.6.15-144-ksmbd-Add-missing-set_freezable-for-freezable-.patch
+	patches.kernel.org/6.6.15-145-dt-bindings-net-snps-dwmac-Tx-coe-unsupported.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
