--- a/series.conf
+++ b/series.conf
@@ -3035,6 +3035,7 @@
 	patches.kernel.org/6.6.15-116-rtc-Adjust-failure-return-code-for-cmos_set_al.patch
 	patches.kernel.org/6.6.15-117-rtc-mc146818-lib-Adjust-failure-return-code-fo.patch
 	patches.kernel.org/6.6.15-118-rtc-Add-support-for-configuring-the-UIP-timeou.patch
+	patches.kernel.org/6.6.15-119-rtc-Extend-timeout-for-waiting-for-UIP-to-clea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
