--- a/series.conf
+++ b/series.conf
@@ -8196,6 +8196,7 @@
 	patches.suse/maple_tree-add-benchmarking-for-mas_for_each.patch
 	patches.suse/maple_tree-add-benchmarking-for-mas_prev.patch
 	patches.suse/maple_tree-introduce-__mas_set_range.patch
+	patches.suse/maple_tree-re-introduce-entry-to-mas_preallocate-arg.patch
 	patches.suse/mm-hugepage-pud-allow-arch-specific-helper-function--348a.patch
 	patches.suse/mm-page_alloc-avoid-unneeded-alike_pages-calculation.patch
 	patches.suse/mm-vmscan-fix-inaccurate-reclaim-during-proactive-reclaim.patch
