--- a/series.conf
+++ b/series.conf
@@ -45016,6 +45016,7 @@
 	patches.suse/nvmet-tcp-fix-a-crash-in-nvmet_req_complete.patch
 	patches.suse/nvmet-tcp-remove-boilerplate-code.patch
 	patches.suse/nvmet-tcp-Fix-the-H2C-expected-PDU-len-calculation.patch
+	patches.suse/ceph-select-FS_ENCRYPTION_ALGS-if-FS_ENCRYPTION.patch
 	patches.suse/apparmor-avoid-crash-when-parsed-profile-name-is-emp.patch
 	patches.suse/power-supply-bq256xx-fix-some-problem-in-bq256xx_hw_.patch
 	patches.suse/power-supply-cw2015-correct-time_to_empty-units-in-s.patch
