--- a/series.conf
+++ b/series.conf
@@ -44879,6 +44879,7 @@
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.16-patches.patch
 	patches.suse/scsi-fnic-Return-error-if-vmalloc-failed.patch
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
+	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-hisi_sas-Replace-with-standard-error-code-return-value.patch
 	patches.suse/scsi-hisi_sas-Rollback-some-operations-if-FLR-failed.patch
 	patches.suse/scsi-hisi_sas-Correct-the-number-of-global-debugfs-registers.patch
