--- a/series.conf
+++ b/series.conf
@@ -44881,6 +44881,7 @@
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
+	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.17.patch
 	patches.suse/scsi-hisi_sas-Replace-with-standard-error-code-return-value.patch
 	patches.suse/scsi-hisi_sas-Rollback-some-operations-if-FLR-failed.patch
 	patches.suse/scsi-hisi_sas-Correct-the-number-of-global-debugfs-registers.patch
