--- a/series.conf
+++ b/series.conf
@@ -15215,6 +15215,7 @@
 	patches.suse/scsi-mpi3mr-Support-for-preallocation-of-SGL-BSG-data-buffers-part-2.patch
 	patches.suse/scsi-mpi3mr-Support-for-preallocation-of-SGL-BSG-data-buffers-part-3.patch
 	patches.suse/scsi-mpi3mr-Update-driver-version-to-8.5.1.0.0.patch
+	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scripts-kernel-doc-restore-warning-for-Excess-struct.patch
 	patches.suse/scripts-get_abi-fix-source-path-leak.patch
 	patches.suse/docs-kernel_abi.py-fix-command-injection.patch
