--- a/series.conf
+++ b/series.conf
@@ -44049,6 +44049,7 @@
 	patches.suse/nvme-auth-use-chap-s2-to-indicate-bidirectional-auth.patch
 	patches.suse/nvme-sanitize-metadata-bounce-buffer-for-reads.patch
 	patches.suse/nvmet-auth-complete-a-request-only-after-freeing-the.patch
+	patches.suse/nvme-pci-add-BOGUS_NID-for-Intel-0a54-device.patch
 	patches.suse/mmc-core-sdio-hold-retuning-if-sdio-in-1-bit-mode.patch
 	patches.suse/mmc-mtk-sd-Use-readl_poll_timeout_atomic-in-msdc_res.patch
 	patches.suse/mmc-core-Capture-correct-oemid-bits-for-eMMC-cards.patch
