--- a/series.conf
+++ b/series.conf
@@ -45024,6 +45024,7 @@
 	patches.suse/nvmet-tcp-remove-boilerplate-code.patch
 	patches.suse/nvme-fix-max_discard_sectors-calculation.patch
 	patches.suse/nvmet-re-fix-tracing-strncpy-warning.patch
+	patches.suse/nvme-trace-avoid-memcpy-overflow-warning.patch
 	patches.suse/nvmet-tcp-Fix-the-H2C-expected-PDU-len-calculation.patch
 	patches.suse/apparmor-avoid-crash-when-parsed-profile-name-is-emp.patch
 	patches.suse/power-supply-bq256xx-fix-some-problem-in-bq256xx_hw_.patch
