--- a/series.conf
+++ b/series.conf
@@ -44644,6 +44644,7 @@
 	patches.suse/RDMA-irdma-Fix-UAF-in-irdma_sc_ccq_get_cqe_info.patch
 	patches.suse/RDMA-irdma-Avoid-free-the-non-cqp_request-scratch.patch
 	patches.suse/io_uring-af_unix-disable-sending-io_uring-over-socke.patch
+	patches.suse/nvme-introduce-helper-function-to-get-ctrl-state.patch
 	patches.suse/nvme-pci-Add-sleep-quirk-for-Kingston-drives.patch
 	patches.suse/scsi-be2iscsi-Fix-a-memleak-in-beiscsi_init_wrb_handle.patch
 	patches.suse/misc-mei-client.c-return-negative-error-code-in-mei_.patch
