--- a/series.conf
+++ b/series.conf
@@ -44747,6 +44747,7 @@
 	patches.suse/ASoC-Intel-bytcr_rt5640-Add-quirk-for-the-Medion-Lif.patch
 	patches.suse/ASoC-hdmi-codec-fix-missing-report-for-jack-initial-.patch
 	patches.suse/lib-vsprintf-Fix-pfwf-when-current-node-refcount-0.patch
+	patches.suse/nvme-pci-fix-sleeping-function-called-from-interrupt.patch
 	patches.suse/Input-atkbd-skip-ATKBD_CMD_GETID-in-translated-mode.patch
 	patches.suse/Input-i8042-add-nomux-quirk-for-Acer-P459-G2-M.patch
 	patches.suse/Input-ipaq-micro-keys-add-error-handling-for-devm_km.patch
