--- a/series.conf
+++ b/series.conf
@@ -15632,6 +15632,7 @@
 	patches.suse/nvmet-tcp-fix-a-crash-in-nvmet_req_complete.patch
 	patches.suse/nvmet-tcp-remove-boilerplate-code.patch
 	patches.suse/nvmet-tcp-fix-a-missing-endianess-conversion-in-nvme.patch
+	patches.suse/nvme-fix-max_discard_sectors-calculation.patch
 	patches.suse/nvmet-tcp-Fix-the-H2C-expected-PDU-len-calculation.patch
 	patches.suse/apparmor-fix-possible-memory-leak-in-unpack_trans_ta.patch
 	patches.suse/apparmor-avoid-crash-when-parsed-profile-name-is-emp.patch
