--- a/series.conf
+++ b/series.conf
@@ -14552,6 +14552,7 @@
 	patches.suse/lib-vsprintf-Fix-pfwf-when-current-node-refcount-0.patch
 	patches.suse/KVM-SEV-Do-not-intercept-accesses-to-MSR_IA32_XSS-fo.patch
 	patches.suse/Revert-nvme-fc-fix-race-between-error-recovery-and-c.patch
+	patches.suse/nvme-pci-fix-sleeping-function-called-from-interrupt.patch
 	patches.suse/Input-psmouse-enable-Synaptics-InterTouch-for-ThinkP.patch
 	patches.suse/Input-atkbd-skip-ATKBD_CMD_GETID-in-translated-mode.patch
 	patches.suse/Input-i8042-add-nomux-quirk-for-Acer-P459-G2-M.patch
