--- a/series.conf
+++ b/series.conf
@@ -15634,6 +15634,7 @@
 	patches.suse/nvmet-tcp-fix-a-missing-endianess-conversion-in-nvme.patch
 	patches.suse/nvme-fix-max_discard_sectors-calculation.patch
 	patches.suse/nvmet-re-fix-tracing-strncpy-warning.patch
+	patches.suse/nvme-trace-avoid-memcpy-overflow-warning.patch
 	patches.suse/nvmet-tcp-Fix-the-H2C-expected-PDU-len-calculation.patch
 	patches.suse/apparmor-fix-possible-memory-leak-in-unpack_trans_ta.patch
 	patches.suse/apparmor-avoid-crash-when-parsed-profile-name-is-emp.patch
