--- a/series.conf
+++ b/series.conf
@@ -15631,6 +15631,7 @@
 	patches.suse/nvmet-tcp-Fix-a-kernel-panic-when-host-sends-an-inva.patch
 	patches.suse/nvmet-tcp-fix-a-crash-in-nvmet_req_complete.patch
 	patches.suse/nvmet-tcp-remove-boilerplate-code.patch
+	patches.suse/nvmet-tcp-fix-a-missing-endianess-conversion-in-nvme.patch
 	patches.suse/nvmet-tcp-Fix-the-H2C-expected-PDU-len-calculation.patch
 	patches.suse/apparmor-fix-possible-memory-leak-in-unpack_trans_ta.patch
 	patches.suse/apparmor-avoid-crash-when-parsed-profile-name-is-emp.patch
