--- a/series.conf
+++ b/series.conf
@@ -4892,6 +4892,7 @@
 	patches.suse/cxl-pci-Fix-debug-message-in-cxl_probe_regs.patch
 	patches.suse/iov_iter-track-truncated-size.patch
 	patches.suse/io_uring-reexpand-under-reexpanded-iters.patch
+	patches.suse/fs-Move-notify_change-permission-checks-into-may_setattr.patch
 	patches.suse/s390-add-kmemleak-annotation-in-stack_alloc.patch
 	patches.suse/s390-entry-make-oklabel-within-CHKSTG-macro-local.patch
 	patches.suse/s390-unwind-use-current_frame_address-to-unwind-current-task.patch
