--- a/series.conf
+++ b/series.conf
@@ -15658,6 +15658,7 @@
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
 	patches.suse/dmaengine-idxd-Move-dma_free_coherent-out-of-spinloc.patch
 	patches.suse/clocksource-drivers-timer-ti-dm-Fix-make-W-n-kerneld.patch
+	patches.suse/tick-sched-Fix-idle-and-iowait-sleeptime-accounting-.patch
 	patches.suse/xen-netback-don-t-produce-zero-size-SKB-frags.patch
 	patches.suse/tracing-Ensure-visibility-when-inserting-an-element-into-tracing_map.patch
 	patches.suse/exec-Fix-error-handling-in-begin_new_exec.patch
