--- a/series.conf
+++ b/series.conf
@@ -8198,6 +8198,7 @@
 	patches.suse/maple_tree-add-benchmarking-for-mas_for_each.patch
 	patches.suse/maple_tree-add-benchmarking-for-mas_prev.patch
 	patches.suse/mm-change-do_vmi_align_munmap-tracking-of-VMAs-to-remove.patch
+	patches.suse/mm-remove-prev-check-from-do_vmi_align_munmap.patch
 	patches.suse/maple_tree-introduce-__mas_set_range.patch
 	patches.suse/maple_tree-re-introduce-entry-to-mas_preallocate-arg.patch
 	patches.suse/maple_tree-adjust-node-allocation-on-mas_rebalance.patch
