--- a/series.conf
+++ b/series.conf
@@ -8200,6 +8200,7 @@
 	patches.suse/mm-change-do_vmi_align_munmap-tracking-of-VMAs-to-remove.patch
 	patches.suse/mm-remove-prev-check-from-do_vmi_align_munmap.patch
 	patches.suse/maple_tree-introduce-__mas_set_range.patch
+	patches.suse/mm-remove-re-walk-from-mmap_region.patch
 	patches.suse/maple_tree-re-introduce-entry-to-mas_preallocate-arg.patch
 	patches.suse/maple_tree-adjust-node-allocation-on-mas_rebalance.patch
 	patches.suse/maple_tree-move-mas_wr_end_piv-below-mas_wr_extend_n.patch
