--- a/series.conf
+++ b/series.conf
@@ -8203,6 +8203,7 @@
 	patches.suse/mm-remove-re-walk-from-mmap_region.patch
 	patches.suse/maple_tree-re-introduce-entry-to-mas_preallocate-arg.patch
 	patches.suse/maple_tree-adjust-node-allocation-on-mas_rebalance.patch
+	patches.suse/mm-use-vma_iter_clear_gfp-in-nommu.patch
 	patches.suse/maple_tree-move-mas_wr_end_piv-below-mas_wr_extend_n.patch
 	patches.suse/maple_tree-update-mas_preallocate-testing.patch
 	patches.suse/maple_tree-refine-mas_preallocate-node-calculations.patch
