--- a/series.conf
+++ b/series.conf
@@ -3362,6 +3362,7 @@
 	patches.kernel.org/6.6.16-111-ARM-dts-imx-Use-flash-0-0-pattern.patch
 	patches.kernel.org/6.6.16-112-ARM-dts-imx27-Fix-sram-node.patch
 	patches.kernel.org/6.6.16-113-ARM-dts-imx1-Fix-sram-node.patch
+	patches.kernel.org/6.6.16-114-net-phy-at803x-fix-passing-the-wrong-reference.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
