--- a/series.conf
+++ b/series.conf
@@ -3436,6 +3436,7 @@
 	patches.kernel.org/6.6.16-185-hwmon-hp-wmi-sensors-Fix-failure-to-load-on-El.patch
 	patches.kernel.org/6.6.16-186-f2fs-fix-to-tag-gcing-flag-on-page-during-bloc.patch
 	patches.kernel.org/6.6.16-187-drm-exynos-Call-drm_atomic_helper_shutdown-at-.patch
+	patches.kernel.org/6.6.16-188-IB-ipoib-Fix-mcast-list-locking.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
