--- a/series.conf
+++ b/series.conf
@@ -3272,6 +3272,7 @@
 	patches.kernel.org/6.6.16-021-ACPI-NUMA-Fix-the-logic-of-getting-the-fake_px.patch
 	patches.kernel.org/6.6.16-022-kunit-tool-fix-parsing-of-test-attributes.patch
 	patches.kernel.org/6.6.16-023-PM-devfreq-Synchronize-devfreq_monitor_-start-.patch
+	patches.kernel.org/6.6.16-024-ACPI-APEI-set-memory-failure-flags-as-MF_ACTIO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
