--- a/series.conf
+++ b/series.conf
@@ -3343,6 +3343,7 @@
 	patches.kernel.org/6.6.16-092-scsi-libfc-Fix-up-timeout-error-in-fc_fcp_rec_.patch
 	patches.kernel.org/6.6.16-093-minmax-deduplicate-__unconst_integer_typeof.patch
 	patches.kernel.org/6.6.16-094-minmax-fix-header-inclusions.patch
+	patches.kernel.org/6.6.16-095-minmax-add-umin-a-b-and-umax-a-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
