--- a/series.conf
+++ b/series.conf
@@ -3573,6 +3573,7 @@
 	patches.kernel.org/6.6.16-322-ASoC-codecs-lpass-wsa-macro-fix-compander-volu.patch
 	patches.kernel.org/6.6.16-323-ASoC-codecs-wsa883x-fix-PA-volume-control.patch
 	patches.kernel.org/6.6.16-324-drm-amdgpu-Fix-missing-error-code-in-gmc_v6-7-.patch
+	patches.kernel.org/6.6.16-325-pds_core-Prevent-health-thread-from-running-du.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
