--- a/series.conf
+++ b/series.conf
@@ -3508,6 +3508,7 @@
 	patches.kernel.org/6.6.16-257-perf-Fix-the-nr_addr_filters-fix.patch
 	patches.kernel.org/6.6.16-258-wifi-cfg80211-fix-RCU-dereference-in-__cfg8021.patch
 	patches.kernel.org/6.6.16-259-drm-using-mul_u32_u32-requires-linux-math64.h.patch
+	patches.kernel.org/6.6.16-260-drm-amdkfd-only-flush-mes-process-context-if-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
