--- a/series.conf
+++ b/series.conf
@@ -3456,6 +3456,7 @@
 	patches.kernel.org/6.6.16-205-drm-amd-display-make-flip_timestamp_in_us-a-64.patch
 	patches.kernel.org/6.6.16-206-drm-amd-display-Only-clear-symclk-otg-flag-for.patch
 	patches.kernel.org/6.6.16-207-clk-imx-clk-imx8qxp-fix-LVDS-bypass-pixel-and-.patch
+	patches.kernel.org/6.6.16-208-drm-amdgpu-Fix-ecc-irq-enable-disable-unpaired.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
