--- a/series.conf
+++ b/series.conf
@@ -3325,6 +3325,7 @@
 	patches.kernel.org/6.6.16-074-net-phy-micrel-fix-ts_info-value-in-case-of-no.patch
 	patches.kernel.org/6.6.16-075-PCI-Add-no-PM-reset-quirk-for-NVIDIA-Spectrum-.patch
 	patches.kernel.org/6.6.16-076-bonding-return-ENOMEM-instead-of-BUG-in-alb_up.patch
+	patches.kernel.org/6.6.16-077-net-usb-ax88179_178a-avoid-two-consecutive-dev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
