--- a/series.conf
+++ b/series.conf
@@ -3428,6 +3428,7 @@
 	patches.kernel.org/6.6.16-177-media-uvcvideo-Fix-power-line-control-for-a-Ch.patch
 	patches.kernel.org/6.6.16-178-media-uvcvideo-Fix-power-line-control-for-Sunp.patch
 	patches.kernel.org/6.6.16-179-media-rkisp1-Drop-IRQF_SHARED.patch
+	patches.kernel.org/6.6.16-180-media-rkisp1-Fix-IRQ-handler-return-values.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
