--- a/series.conf
+++ b/series.conf
@@ -3504,6 +3504,7 @@
 	patches.kernel.org/6.6.16-253-drm-amdgpu-Fix-with-right-return-code-EIO-in-a.patch
 	patches.kernel.org/6.6.16-254-drm-amdgpu-Release-adev-pm.fw-before-return-in.patch
 	patches.kernel.org/6.6.16-255-drm-amdkfd-Fix-node-NULL-check-in-svm_range_ge.patch
+	patches.kernel.org/6.6.16-256-i2c-rk3x-Adjust-mask-value-offset-for-i2c2-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
