--- a/series.conf
+++ b/series.conf
@@ -3531,6 +3531,7 @@
 	patches.kernel.org/6.6.16-280-e1000e-correct-maximum-frequency-adjustment-va.patch
 	patches.kernel.org/6.6.16-281-ixgbe-Refactor-returning-internal-error-codes.patch
 	patches.kernel.org/6.6.16-282-ixgbe-Refactor-overtemp-event-handling.patch
+	patches.kernel.org/6.6.16-283-ixgbe-Fix-an-error-handling-path-in-ixgbe_read.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
