--- a/series.conf
+++ b/series.conf
@@ -14758,6 +14758,7 @@
 	patches.suse/gfs2-Fix-kernel-NULL-pointer-dereference-in-gfs2_rgrp_dump.patch
 	patches.suse/FS-JFS-UBSAN-array-index-out-of-bounds-in-dbAdjTree.patch
 	patches.suse/UBSAN-array-index-out-of-bounds-in-dtSplitRoot.patch
+	patches.suse/jfs-fix-slab-out-of-bounds-Read-in-dtSearch.patch
 	patches.suse/dlm-use-kernel_connect-and-kernel_bind.patch
 	patches.suse/dlm-fix-format-seq-ops-type-4.patch
 	patches.suse/pstore-ram_core-fix-possible-overflow-in-persistent_.patch
