--- a/series.conf
+++ b/series.conf
@@ -14761,6 +14761,7 @@
 	patches.suse/jfs-fix-slab-out-of-bounds-Read-in-dtSearch.patch
 	patches.suse/jfs-fix-array-index-out-of-bounds-in-dbAdjTree.patch
 	patches.suse/jfs-fix-uaf-in-jfs_evict_inode.patch
+	patches.suse/jfs-fix-array-index-out-of-bounds-in-diNewExt.patch
 	patches.suse/dlm-use-kernel_connect-and-kernel_bind.patch
 	patches.suse/dlm-fix-format-seq-ops-type-4.patch
 	patches.suse/pstore-ram_core-fix-possible-overflow-in-persistent_.patch
