--- a/series.conf
+++ b/series.conf
@@ -15228,6 +15228,7 @@
 	patches.suse/docs-kernel_abi.py-fix-command-injection.patch
 	patches.suse/kernel-doc-handle-a-void-function-without-producing-.patch
 	patches.suse/ring-buffer-Documentation-Add-documentation-on-buffe.patch
+	patches.suse/reiserfs-Avoid-touching-renamed-directory-if-parent-.patch
 	patches.suse/drm-panel-edp-Add-AUO-B116XTN02-BOE-NT116WHM-N21-836.patch
 	patches.suse/Revert-drm-tidss-Annotate-dma-fence-critical-section.patch
 	patches.suse/Revert-drm-omapdrm-Annotate-dma-fence-critical-secti.patch
