--- a/series.conf
+++ b/series.conf
@@ -12984,6 +12984,7 @@
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
 	patches.suse/perf-arm_cspmu-Separate-Arm-and-vendor-module.patch
+	patches.suse/perf-arm_cspmu-Split-64-bit-write-to-32-bit-writes.patch
 	patches.suse/clocksource-drivers-arm_arch_timer-limit-XGene-1-wor.patch
 	patches.suse/arm64-module-Fix-PLT-counting-when-CONFIG_RANDOMIZE_.patch
 	patches.suse/arm64-Restrict-CPU_BIG_ENDIAN-to-GNU-as-or-LLVM-IAS-.patch
