--- a/series.conf
+++ b/series.conf
@@ -12986,6 +12986,7 @@
 	patches.suse/perf-arm_cspmu-Separate-Arm-and-vendor-module.patch
 	patches.suse/perf-arm_cspmu-Split-64-bit-write-to-32-bit-writes.patch
 	patches.suse/perf-arm_cspmu-Support-implementation-specific-filters.patch
+	patches.suse/perf-arm_cspmu-Support-implementation-specific-validation.patch
 	patches.suse/clocksource-drivers-arm_arch_timer-limit-XGene-1-wor.patch
 	patches.suse/arm64-module-Fix-PLT-counting-when-CONFIG_RANDOMIZE_.patch
 	patches.suse/arm64-Restrict-CPU_BIG_ENDIAN-to-GNU-as-or-LLVM-IAS-.patch
